external-crates/move/crates/move-compiler/tests/move_check/expansion/type_arguments_on_field_access.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/expansion/type_arguments_on_field_access.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

warning[W09006]: unused struct type parameter
  ┌─ tests/move_check/expansion/type_arguments_on_field_access.move:2:14
  │
2 │     struct X<T> {}
  │              ^ Unused type parameter 'T'. Consider declaring it as phantom
  │
  = This warning can be suppressed with '#[allow(unused_type_parameter)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/type_arguments_on_field_access.move:6:17
  │
6 │         x.f<u64>;
  │                 ^
  │                 │
  │                 Unexpected ';'
  │                 Expected '('

